--- a/bDot/bemCss/css/common.scss
+++ b/bDot/bemCss/css/common.scss
@@ -1763,6 +1763,136 @@ raidoChecktwo관련 공통*/
         font-size:12px;font-weight:300;line-height:1;color:#666;
     }
 }
+.availcoupon{
+    display:block;padding-top:30px;padding-bottom:20px;padding-left:20px;padding-right:20px;
+    &__head{
+        display:flex;flex-flow:row nowrap;justify-content:space-between;align-items:center;
+        padding-bottom:15px;
+    }
+    &__headtit{
+        font-size:14px;font-weight:500;line-height:1.2;color:#212121
+    }
+    &__headvalue{
+        display:inline-flex;align-items:center;font-size:12px;line-height:1.3;color:#212121;
+        .bold{
+            font-weight:700;padding-right:5px;
+        }
+    }
+    &__bottom{
+        display:flex;flex-flow:row nowrap;justify-content:space-between;align-items:center;
+    }
+    &__bottomtit{
+        font-size:12px;font-weight:400;color:#212121;
+    }
+    &__bottomprice{
+        font-size:14px;color:#212121;font-weight:500;
+        .bold{
+            font-weight:500;padding-right:6px;
+        }
+    }
+}
+.availcouponlist{
+    display:block;
+}
+.selectbarList{
+    border:1px solid #e0e0e0;text-align:left;
+    position:relative;
+    &__top{
+        padding-left:20px;padding-right:20px;display:block;z-index:7;position:relative;padding-top:18px;
+        border-top-width:1px;border-left-width:1px;border-right-width:1px;border-style:solid;border-color:#e0e0e0;border-bottom-width:0;padding-bottom:18px;background-color:white;
+        .txt{
+            font-size:14px;font-weight:400;letter-spacing:-0.28px;
+        }
+    }
+    &__dropdownicon{
+        width:10px;height:6px;display:block;right:20px;top:50%;transform:translateY(-50%);position:absolute;z-index:7
+    }
+    &__fixedTop{
+        height:1px;background-color:#c6c6c6;position:absolute;z-index:9;
+        width:305px;top:48px;left:50%;transform:translateX(-50%);display:block;
+    }
+    &__list{
+        display:block;position:absolute;top:0;left:0;width:100%;
+        padding-left:20px;padding-right:20px;height:245px;
+        border:1px solid #e0e0e0;box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.10);overflow-y:auto;
+        padding-top:66px;z-index:3;background-color:white;
+    }
+    &__item{
+        padding-bottom:16px;
+    }
+    &__itemtit{
+        font-size:12px;font-weight:500;color:#212121;padding-bottom:10px;
+    }
+    &__itemcontent{
+        display:flex;flex-flow:row nowrap;
+    }
+    &__itemdate{
+        font-size:12px;font-weight:400;color:#666;
+    }
+    &__contentsepbar{
+        margin-left:10px;margin-right:10px;opacity:0.4;background-color:#666;
+    }
+    &__itemvalue{
+       font-size:12px;font-weight:600;color:#212121 
+    }
+}
+
+.shippingaddress-listexists{
+    display:block;
+}
+.shippingaddress-listsep{
+    width:335px;height:1px;opacity:0.4;background-color:#e0e0e0;margin:0 auto;
+}
+.shippingaddress-listitem{
+    padding-left:20px;padding-right:20px;display:flex;flex-flow:row wrap;justify-content:space-between;align-items:center;padding-top:28px;padding-bottom:25px;text-align:left;
+}
+.radioCheckItem{
+    display:inline-flex;flex-flow:row nowrap;justify-content:flex-start;align-items:center;
+    &__radio{
+        display:none;
+    }
+    &__checktxt{
+        font-size:14px;font-weight:500;line-height:1.2;color:#212121;
+    }
+    &__checklabel{
+        width:20px;height:20px;position:relative;display:block;border-radius:50%;border-width:1px; border-style:solid;border-color:#202020;margin-right:7px;
+    }
+}
+.radioCheckItem .radioCheckItem__radio:checked + .radioCheckItem__checklabel::after{
+    content:'';
+    display:block;
+    width:80%;
+    height:80%;
+    background-color:#202020;
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    -o-border-radius:50%;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translateX(-50%)translateY(-50%);
+    -webkit-transform:translateX(-50%)translateY(-50%);
+    -moz-transform:translateX(-50%)translateY(-50%);
+    -ms-transform:translateX(-50%)translateY(-50%);
+    -o-transform:translateX(-50%)translateY(-50%);
+}
+.shippingaddress-listcond{
+    display:inline-flex;flex-flow:row nowrap;align-items:center;
+}
+.shippingaddress-listcondicon{
+    width:13px;height:13px;display:block;
+    img{
+        width:100%;height:100%;display:block;
+    }
+}
+.shippingaddress-listcondicon:first-child{
+    margin-right:18px;
+}
+.shippingaddress-listdetail{
+    padding-top:15px;font-size:12px;line-height:18px;color:#212121;font-weight:400;padding-left:30px;
+}
 
 .generalAccordsubchild{
     display:block;
@@ -1840,6 +1970,9 @@ raidoChecktwo관련 공통*/
     }
     &__txt--size2{
         font-size:14px;color:#212121;font-weight:500;line-height:12px;letter-spacing: 0.28px;
+    }  
+    &__txt--size3{
+        font-size:12px;color:#212121;font-weight:500;line-height:12px;letter-spacing: 0.28px;text-align:left;
     }
     &__checklabel--size1{
         width:20px;height:20px;display:block;border:2px solid #212121;position:relative;margin-right:10px;
